<resources>
    <string name="app_name">StreamingTracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_film">My Movies</string>
    <string name="menu_shows">My Tv Shows</string>
    <string name="menu_aboutUs">About Us</string>
    <string name="menu_logout">Logout</string>

    <string name="slogan">Your TV Series and Movies in one app!</string>
    <string name="account_request">Don\'t you have any account ?</string>
    <string name="registration_okay">You have registered successfully! Please Login to continue</string>
    <string name="registration_failed">Registration failed. Riprova</string>
    <string name="name_warning">The name is required!</string>
    <string name="surname_warning">The surname is required!</string>
    <string name="email_warning">The email è required!</string>
    <string name="email_wrong">Please enter a valid email</string>
    <string name="password_warning">The password is required!</string>
    <string name="password_length">The password must be at least 8 characters long</string>
    <string name="login_failed">Login failed. Enter correct credentials</string>
    <string name="genericError_message">Something went wrong!</string>
    <string name="whoWeAre">We are a startup created in 2018 by 3 people: Stefanoni Jonathan, Pietroforte Alessio and Perrone Mario, founded to give life to this app that in just 2 years, has climbed every ranking and today is in first place for the number of downloads throughout the world. Our headquarters are located in Milan and today it has more than 150 employees, engaged in the development of new applications and the improvement of what is now the most downloaded app in the world: StreamingTracker.</string>
    <string name="logout_question">Are you sure to logout?</string>
    <string name="insert_data">Enter your details here:</string>
    <string name="register_you">Sign in</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="surname">Surname</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome!</string>
    <string name="description1">- Choose what to watch through the charts of the moment</string>
    <string name="description2">- Check out the latest releases in theaters and on streaming platforms</string>
    <string name="description3">- Keep track of your movies and series already watched and to watch</string>
    <string name="menu_charts">Charts</string>
    <string name="movies">Movies</string>
    <string name="most_popular_movies">Most Popular Movies</string>
    <string name="now_playing_movies">Now Playing Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="most_popular_tv_shows">Most Popular TV Shows</string>
    <string name="top_rated_tv_shows">Top Rated TV Shows</string>
    <string name="on_the_air_tv_shows">On The Air TV Shows</string>
    <string name="enter_keyword">Enter query...</string>
    <string name="no_results">No results</string>
    <string name="something_wrong">Something wrong with connection</string>
    <string name="search_movie_or_tv_show">Search Movie or TV Show</string>
    <string name="noLettersError">No letters detected</string>
    <string name="choose">Please choose between movie and tv types</string>
    <string name="shows">Tv Shows</string>
    <string name="aboutUs_title_fragment">Who We Are</string>
    <string name="logout_address">Email Address:</string>
    <string name="logout_surname">Surname:</string>
    <string name="logout_name">Name:</string>
    <string name="your_results">Your Results:</string>

</resources>